--- a/ccnu-network-culture-festival/requirements.txt
+++ b/ccnu-network-culture-festival/requirements.txt
@@ -1,30 +1,34 @@
 alembic==0.8.6
 bleach==1.4.2
+certifi==2018.4.16
+chardet==3.0.4
+duoshuo-python-sdk==0.1
 Flask==0.10.1
 Flask-Admin==1.4.0
+Flask-HTTPAuth==3.2.4
 Flask-Login==0.3.2
 Flask-Migrate==1.8.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
-Flask-HTTPAuth
 freeze==1.0.10
+geetest==3.2.0
 html5lib==0.9999999
+idna==2.7
 itsdangerous==0.24
 Jinja2==2.8
 Mako==1.0.4
 Markdown==2.6.6
 MarkupSafe==0.23
+Pillow==5.2.0
 PyJWT==1.4.0
 python-editor==1.0
+qiniu==7.2.2
+qrcode==6.0
 redis==2.10.5
 requests==2.10.0
 six==1.10.0
 SQLAlchemy==1.0.12
+urllib3==1.23
 Werkzeug==0.11.9
 WTForms==2.1
-qrcode
-Pillow
-qiniu
-duoshuo-python-sdk==0.1
-geetest==3.2.0
